# setup

./: LICENSE  README.md  compose.yaml
Dockerfile/: Dockerfile
src/: setup.sh  vm.sh
src/commands/config/: init.sh  update.sh
src/commands/delete/: python.sh  r.sh  spark.sh
src/commands/install/: all.sh  awscli.sh  docker.sh  dotnet.sh  gh.sh  gurobi.sh  helm.sh  julia.sh  kubectl.sh  nginx.sh  nvidia.sh  python.sh  r.sh  rclone-plugin.sh  rclone.sh  rstudio.sh  rust.sh  spark.sh
src/commands/package/: all.sh  julia.sh  python.sh  r.sh
src/commands/project/: python.sh  r.sh
src/commands/update/: all.sh  awscli.sh
src/config/: compose.yaml  env.sh  requirements.jl  requirements.r  requirements.txt
src/resources/: compose.yaml  env.sh  init.r  install.r  prepare.sh  requirements.jl  requirements.r  requirements.txt  settings.json
src/resources/templates/python/: .gitignore  compose.yaml  pyproject.toml
src/resources/templates/python/Dockerfile/: dev.Dockerfile  dev_requirements.txt
src/resources/templates/python/package/: .gitignore
src/resources/templates/python/package/notebooks/: core.ipynb
src/resources/templates/python/script/: README.md
src/resources/templates/python/script/Dockerfile/: dev.Dockerfile
tests/Dockerfile/: Dockerfile
