[tool.poetry]
name = "GITHUB_REPO"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Wonjae Lee <wonjae.lee.2@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wonjae-lee-2/GITHUB_REPO"
packages = [{include = "PACKAGE", from = "src"}]
exclude = ["compose.yaml", "Dockerfile", "tmp"]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = "~23.1"
flake8 = "~6.0"
jupyterlab = "~3.6"
pytest = "~7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"